syntax = "proto3";
package evnode.v1;

import "google/protobuf/empty.proto";
import "evnode/v1/evnode.proto";
import "evnode/v1/state.proto";

option go_package = "github.com/evstack/ev-node/types/pb/evnode/v1";

// P2PService defines the RPC service for the P2P package
service P2PService {
  // GetPeerInfo returns information about the connected peers
  rpc GetPeerInfo(google.protobuf.Empty) returns (GetPeerInfoResponse) {}

  // GetNetInfo returns network information
  rpc GetNetInfo(google.protobuf.Empty) returns (GetNetInfoResponse) {}
}

// GetPeerInfoResponse defines the response for retrieving peer information
message GetPeerInfoResponse {
  // List of connected peers
  repeated PeerInfo peers = 1;
}
// GetNetInfoResponse defines the response for retrieving network information
message GetNetInfoResponse {
  // Network information
  NetInfo net_info = 1;
}
// PeerInfo contains information about a connected peer
message PeerInfo {
  // Peer ID
  string id = 1;
  // Peer address
  string address = 2;
}
// NetInfo contains information about the network
message NetInfo {
  // Network ID
  string id = 1;
  // Listen address
  repeated string listen_addresses = 2;
  // List of connected peers
  repeated string connected_peers = 3;
}
